# playground-axum

./: .env  Cargo.toml  README.md
entities/: Cargo.toml
entities/src/entities/: user.rs
migration/src/: lib.rs
src/: db.rs  handlers.rs  main.rs
src/entities/: mod.rs  user.rs
templates/: .env  users.html
