[package]
name = "playground-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
axum = "0.8.4"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.13", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread"] }
